Fix rendering issue on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -5,6 +5,9 @@
 }
 
 @media all and (max-width: 960px) {
+	#ui, #map, #hqInfo {
+		display: none;
+	}
 	#mobile {
 		top: 0; right: 0; bottom: 0; left: 0;
 		position: absolute;
